--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Forms</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/index.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="page">
     <div class="form-container">
